# nsq-client-rs

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: producer.rs
examples/consumer/: Cargo.toml  perf.data
examples/consumer/src/: consumer.rs  main.rs  reader.rs
examples/producer/: Cargo.toml
examples/producer/src/: main.rs
examples/reader/: Cargo.toml
examples/reader/src/: main.rs
src/: async_context.rs  auth.rs  client.rs  codec.rs  commands.rs  config.rs  conn.rs  error.rs  lib.rs  msgs.rs  producer.rs  reader.rs  state.rs  subscribe.rs  tcp.rs  tls.rs
src/tls/: rustls.rs
tests/: codec_test.rs
