[package]
name = "nsq-client"
version = "0.1.5"
authors = ["Alessandro Cresto Miseroglio <alex179ohm@gmail.com>"]

description = "Rust client for the NSQ realtime message processing system"
license = "MIT"
keywords = ["nsq", "queue", "tokio", "actix",  "asynchronous"]
categories = ["caching"]
repository = "https://github.com/alex179ohm/nsq-client-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "alex179ohm/nsq-client-rs" }

[lib]
name = "nsq-client"
path = "src/lib.rs"

[dependencies]
log = "0.4"
bytes = "^0.4"
futures = "^0.1"
tokio-io = "^0.1"
tokio-core = "^0.1"
tokio-codec = "^0.1"
backoff = "0.1"
byteorder = "1.0.0"
hostname = "^0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
snap = "^0.2"
fnv = "1.0.6"

actix = "^0.7"
