[package]
name = "nsq-client"
version = "0.1.3"
authors = ["Alessandro Cresto Miseroglio <alex179ohm@gmail.com>"]
description = """
Rust client for the NSQ realtime message processing system
"""
license = "MIT"
license-file = "LICENSE"
keywords = ["nsq", "queue", "actix",  "async", "actor"]
categories = ["caching", "asynchronous"]
repository = "https://github.com/alex179ohm/nsq-client-rs"
readme = "README.md"
exclude = [
    ".gitignore",
    ".travis.yml",
    ".cargo/config",
    ".appveyor.yml",
    "tests/*",
    "examples/consumer/*"
]

[badges]
appveyor = { repository = "alex179ohm/nsq-client-rs" }
travis-ci = { repository = "alex179ohm/nsq-client-rs" }

[dependencies]
log = "0.4"
bytes = "^0.4"
futures = "^0.1"
tokio-io = "^0.1"
tokio-core = "^0.1"
tokio-codec = "^0.1"
tokio-tcp = "^0.1"
backoff = "0.1"
byteorder = "1.0.0"
hostname = "^0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
fnv = "1.0.6"

actix = "^0.7"
